mp6/nightly.txt
Compilation Results:
********************
updateBoard.c: In function ‘updateBoard’:
updateBoard.c:58:43: error: expected expression before ‘[’ token
     int live_cell_count, x, y, new_board =[boardRowSize*boardColSize];   //create local live cell counter, x, and y variables again
                                           ^
updateBoard.c:66:22: error: subscripted value is neither array nor pointer nor vector
             new_board[x * boardColSize + y] = *(board + x * boardColSize + y);
                      ^
updateBoard.c:58:32: warning: variable ‘new_board’ set but not used [-Wunused-but-set-variable]
     int live_cell_count, x, y, new_board =[boardRowSize*boardColSize];   //create local live cell counter, x, and y variables again
                                ^
updateBoard.c:58:9: warning: unused variable ‘live_cell_count’ [-Wunused-variable]
     int live_cell_count, x, y, new_board =[boardRowSize*boardColSize];   //create local live cell counter, x, and y variables again
         ^
updateBoard.c: In function ‘aliveStable’:
updateBoard.c:83:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
updateBoard.c: In function ‘updateBoard’:
updateBoard.c:58:43: error: expected expression before ‘[’ token
     int live_cell_count, x, y, new_board =[boardRowSize*boardColSize];   //create local live cell counter, x, and y variables again
                                           ^
updateBoard.c:66:22: error: subscripted value is neither array nor pointer nor vector
             new_board[x * boardColSize + y] = *(board + x * boardColSize + y);
                      ^
updateBoard.c:58:32: warning: variable ‘new_board’ set but not used [-Wunused-but-set-variable]
     int live_cell_count, x, y, new_board =[boardRowSize*boardColSize];   //create local live cell counter, x, and y variables again
                                ^
updateBoard.c:58:9: warning: unused variable ‘live_cell_count’ [-Wunused-variable]
     int live_cell_count, x, y, new_board =[boardRowSize*boardColSize];   //create local live cell counter, x, and y variables again
         ^
updateBoard.c: In function ‘aliveStable’:
updateBoard.c:83:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^

******Testing mp6******
******Test 0******
******Test 1******

Failed the nightly test.
This nightly test is focusing on compilation error not functionality test.
This nightly report only tests on the released testcases.
There are many hidden edge testcase for the MP. Please test it yourselve.
HIGHLY RECOMMEND YOU TO START YOUR MP EARLY!!!!!!!
Timestamp: 2021-10-14_00:35:33
